# apidev

./: .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.cursor/: .gitignore
.cursor/agents/: bugfix-orchestrator.md  codebase-researcher.md  coder.md  design-architect.md  openspec-implementer.md  plan-orchestrator.md  qa.md  security.md  spec-analyst.md  tester.md
.cursor/commands/: README.md  bugfix-implement.md  dbspec-audit-naming.md  dbspec-report-delta.md  dbspec-report-env-readiness.md  dbspec-report-full.md  dbspec-report-migrations.md  dbspec-report-ssot-db.md  design-feature.md  improve-prompt.md  openspec-apply.md  openspec-implement-single.md  openspec-implement.md  openspec-proposal.md  prompt-baseline-refresh.md  prompt-improve.md  refresh-prompt-baseline.md  research-codebase.md
.cursor/rules/: commit-conventions.mdc
.github/workflows/: release.yml
docs/: README.md  ai-workflow-guide.md  apidev-concept-and-approach.md  architecture.md  cli-conventions.md  prompt-improvement-regression-cases.md  roadmap.md
docs/architecture/: README.md  architecture-overview.md  architecture-rules.md  c4-components.md  c4-container.md  c4-context.md  generated-integration.md  patterns-and-naming.md  team-conventions.md  validation-blueprint.md
docs/decisions/: README.md  (+1 more)
integration/: auth_registry.py  handler_registry.py  router_factory.py
openspec/: AGENTS.md  project.md
requirements/: base.in  base.txt  code.in  code.txt  test.in  test.txt
scripts/: make_help.py  make_menu.py  test_length_report.py
(+474 files in other folders)
